--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "element-ui": "^2.4.11",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0"
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "element-ui": "^2.4.11",
+    "nuxt": "^2.0.0",
+    "webmidi": "^2.3.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
