--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "build": "nuxt build",
         "start": "nuxt start",
         "generate": "nuxt generate",
+        "build:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
+        "generate:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
         "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
         "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
     },
@@ -24,6 +26,7 @@
         "@nuxtjs/eslint-config": "^1.0.1",
         "@nuxtjs/eslint-module": "^1.0.0",
         "babel-eslint": "^10.0.1",
+        "cross-env": "^6.0.0",
         "eslint": "^6.1.0",
         "eslint-config-prettier": "^4.1.0",
         "eslint-plugin-nuxt": ">=0.4.2",
