--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@nuxtjs/pwa": "^3.0.0-0",
         "element-ui": "^2.4.11",
         "nuxt": "^2.0.0",
+        "gsap": "^2.1.3",
         "three": "^0.108.0",
         "webmidi": "^2.3.3"
     },
