--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@tonejs/midi": "^2.0.7",
     "element-ui": "^2.4.11",
     "nuxt": "^2.0.0",
     "three": "^0.108.0",
